src/SDK-4.x/resources/styles.css
#root {
  viewport-fill: black;
  fill: palegoldenrod;
}

#background {
  x: 0;
  y: 0;
  width:100%;
  height:100%;
  fill:black;
}

#torch {
  x: 0;
  y: 0;
  width:100%;
  height:100%;
  opacity: 0;
  fill:white;
}

#348-time-hour {
  font-size: 100;
  font-family: System-Bold;
  text-length: 60;
  text-anchor: end;
  fill: white;
  x: 100%-205;
  y: 160;
  display: none;
}

#348-time-colon {
  font-size: 100;
  font-family: System-Bold;
  text-length: 60;
  text-anchor: end;
  fill: white;
  x: 100%-180;
  y: 153;
  display: none;
}

#348-time-minute {
  font-size: 100;
  font-family: System-Bold;
  text-length: 60;
  text-anchor: end;
  fill: white; 
  x: 100%-60;
  y: 160;
  display: none; 
}

#348-am-pm {
  font-size: 38;
  font-family: System-Bold;
  text-length: 120;
  text-anchor: end;
  x: 100%-5;
  y: 120;
  fill: white;
  display: none;
}

#348-second {
  font-size: 38;
  font-family: System-Bold;
  text-length: 120;
  text-anchor: end;
  x: 100%-5;
  y:160;
  fill: white;
  display: none;
}

#300-time-hour {
  font-size: 100;
  font-family: System-Bold;
  text-length: 60;
  text-anchor: end;
  fill: white;
  x: 100%-150;
  y: 175;
  display: none;
}

#300-time-colon {
  font-size: 100;
  font-family: System-Bold;
  text-length: 60;
  text-anchor: end;
  fill: white;
  x: 100%-125;
  y: 168;
  display: none;
}

#300-time-minute {
  font-size: 100;
  font-family: System-Bold;
  text-length: 60;
  text-anchor: end;
  fill: white; 
  x: 100%-5;
  y: 175;
  display: none; 
}

#300-am-pm {
  font-size: 40;
  font-family: System-Bold;
  text-length: 120;
  text-anchor: middle;
  x: 100%-140;
  y: 220;
  fill: white;
  display: none;
}

#300-second {
  font-size: 40;
  font-family: System-Bold;
  text-length: 120;
  text-anchor: end;
  x: 100%-5;
  y:220;
  fill: white;
  display: none;
}

#hr {
  x: 3%;
  y: 30;    
}

#hr-count {
  text-anchor: start;
  font-size: 22;
  font-family: System-Bold;
  fill: #969696;
  text-length: 120;
  x: 5;
  y: 0;
}

#hr-resting {
  text-anchor: start;
  font-size: 22;
  font-family: System-Bold;
  fill: #969696;
  text-length: 120;
  x: 0;
  y: 25;
}

#hr-zone {
  text-anchor: start;
  font-size: 22;
  font-family: System-Bold;
  fill: #969696;
  text-length: 120;
  x: 0;
  y: 50;
  display: none;
}

#hr-icon-systole {
  fill: crimson;
  width: 30;
  height: 30;
  x:45;
  y:-10;
}

#hr-icon-diastole {
  fill: crimson;
  width: 36;
  height: 36;
  x:43;
  y:-12;
}

#battery {
  x: 50%;
  y: 30;
  display: none;
}

#battery-icon {
  width: 18;
  height: 18;
  x:15;
  y:-18;
}

#battery-icon-charge {
  width: 18;
  height: 18;
  x:15;
  y:-18;
}

#battery-percent {
  text-anchor: end;
  font-size: 22;
  font-family: System-Bold;
  fill: white;
  x: 15;
  y: 0; 
}

#calendar {
  x: 100%-3%;
  y: 45;
}

#day {
  x: 0;
  y: 0;
  font-size: 22;
  text-anchor: end;
  font-family: System-Bold;
  text-length: 120;
  fill: #969696;
}

#date {
  x: 0;
  y: 25;
  font-size: 22;
  text-anchor: end;
  font-family: System-Bold;
  text-length: 120;
  fill: #969696;
}

#steps {
  display: "none";
}

#distance {
  display: "none";
}

#bm {
  display: "none";
}

#elevationGain  {
  display: "none";
}

#calories  {
  display: "none";
}

#activeMinutes {
  display: "none";
}


#bmr-zone {
  text-anchor: start;
  font-size: 16;
  font-family: System-Bold;
  text-length: 120;
  fill: darkorange;
  x:5;
  y:10;
  display: none;
}

#bmi-zone {
  text-anchor: start;
  font-size: 16;
  font-family: System-Bold;
  text-length: 120;
  fill: darkorange;
  x:5;
  y:25;
  display: none;
}

.icon {
  width: 20;
  height: 20;
  x:0;
  y:0;
}

.count {
  font-size: 22;
  x: 26;
  y: 15;
  text-length: 10; 
  font-family: System-Bold;
}

